putting breaks in and fixing poetry toc nav

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,8 @@ nav ul {
     padding: 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 100%;
 }
 
 nav ul li {
@@ -161,8 +163,8 @@ h5 {
     margin: 0 0 1rem 0;
 }
 
-h4 + h5 {
-  margin: 0 0 1rem 0;
+h4+h5 {
+    margin: 0 0 1rem 0;
 }
 
 .stanza {
